--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,35 @@
-
-name: Docker Build Cloud
+name: Build and Push Docker Image
 
 on:
   push:
+    branches:
+      - "main"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PAT }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          version: "lab:latest"
+          version: "latest"
           driver: cloud
-          endpoint: "${{ vars.DOCKER_USER }}/railworks"
-          install: true
-      - name: Build and push
-        uses: docker/build-push-action@v6
+
+      - name: Build and push with caching
+        uses: docker/build-push-action@v5
         with:
-          tags: "${{ vars.DOCKER_USER }}/docker-build-cloud-demo:latest"
-          # For pull requests, export results to the build cache.
-          # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
-            
+          context: .
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/railworks:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/railworks:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/railworks:cache
+          cache-to: type=inline,push=true
