--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PAT }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -24,12 +24,12 @@ jobs:
           version: "latest"
           driver: cloud
 
-      - name: Build and push with caching
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/railworks:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/railworks:cache
+            ${{ secrets.DOCKER_USER }}/railworks:latest
+            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
           cache-to: type=inline,push=true
