--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: ci
 
 on:
   push:
@@ -11,25 +11,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PAT }}
-
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          version: "latest"
+          version: "lab:latest"
           driver: cloud
-
+          endpoint: "gnitnub/railworks"
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          tags: |
-            ${{ secrets.DOCKER_USER }}/railworks:latest
-            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
-          cache-to: type=inline,push=true
+          tags: "IMAGE"
+          # For pull requests, export results to the build cache.
+          # Otherwise, push to a registry.
+          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
+  
