--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,32 @@
-
-name: Docker Build Cloud
+name: Build and Push Docker Image
 
 on:
   push:
+    branches:
+      - "main"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          version: "lab:latest"
           driver: cloud
-          endpoint: "${{ vars.DOCKER_USER }}/railworks"
-          install: true
-      - name: Build and push
-        uses: docker/build-push-action@v6
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
-          tags: "${{ vars.DOCKER_USER }}/docker-build-cloud-demo:latest"
-          # For pull requests, export results to the build cache.
-          # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
-            
+          context: .
+          tags: |
+            ${{ vars.DOCKER_USER }}/my-repository:latest
+            ${{ vars.DOCKER_USER }}/my-repository:${{ github.sha }}
