--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          tags: "IMAGE"
+          tags:
+            ${{ vars.DOCKER_USER }}/my-repository:latest
+            ${{ vars.DOCKER_USER }}/my-repository:${{ github.sha }}
           # For pull requests, export results to the build cache.
           # Otherwise, push to a registry.
           outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
