--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,12 @@
-name: ci
+name: Docker Build Cloud
 
 on:
   push:
-    branches:
-      - "main"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -21,15 +17,12 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "gnitnub/railworks"
+          endpoint: "${{ vars.DOCKER_USER }}/railworks"
+          install: true
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
-          context: .
-          tags:
-            ${{ vars.DOCKER_USER }}/my-repository:latest
-            ${{ vars.DOCKER_USER }}/my-repository:${{ github.sha }}
+          tags: "${{ vars.DOCKER_USER }}/docker-build-cloud-demo:latest"
           # For pull requests, export results to the build cache.
           # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
-  
+          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
