--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Make Migrations
+        run: python manage.py makemigrations
+
       - name: Apply Migrations
         run: python manage.py migrate
 
