--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ Django==5.1.4
 django-daisy==1.0.7
 factory_boy==3.3.1
 Faker==33.1.0
-flake8==7.1.1
 iniconfig==2.0.0
 mccabe==0.7.0
 packaging==24.2
@@ -14,6 +13,7 @@ pyflakes==3.2.0
 pytest==8.3.4
 pytest-django==4.9.0
 python-dateutil==2.9.0.post0
+ruff==0.8.4
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
