--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
       - name: Build and push Docker image to Staging
@@ -59,9 +59,9 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ vars.DOCKER_USER }}/railworks:staging
-            ${{ vars.DOCKER_USER }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ vars.DOCKER_USER }}/railworks:cache
+            ${{ secrets.DOCKER_USER }}/railworks:staging
+            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
           cache-to: type=inline,push=true
 
   # Step 3: CD - Deploy to Production
@@ -77,7 +77,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
       - name: Build and push Docker image to Production
@@ -86,7 +86,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ vars.DOCKER_USER }}/railworks:latest
-            ${{ vars.DOCKER_USER }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ vars.DOCKER_USER }}/railworks:cache
+            ${{ secrets.DOCKER_USER }}/railworks:latest
+            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
           cache-to: type=inline,push=true
