--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     branches:
       - staging
+      - main
 
 jobs:
   # Step 1: CI - Test and Validate
@@ -53,16 +54,30 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build and push Docker image to Staging
+      - name: Build Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USER }}/railworks:staging
-            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
-          cache-to: type=inline,push=true
+          tags: ${{ secrets.DOCKER_USER }}/railworks:staging
+
+      # Docker Scout Compare Command
+      - name: Authenticate to Docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PAT }}
+
+      - name: Docker Scout
+        id: docker-scout
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: docker/scout-action@v1
+        with:
+          command: compare
+          image: ${{ secrets.DOCKER_USER }}/railworks:staging
+          to-env: production
+          ignore-unchanged: true
+          only-severities: critical,high
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   # Step 3: CD - Deploy to Production
   deploy-production:
@@ -80,13 +95,8 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build and push Docker image to Production
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USER }}/railworks:latest
-            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USER }}/railworks:cache
-          cache-to: type=inline,push=true
+          tags: ${{ secrets.DOCKER_USER }}/railworks:latest
