--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,19 +54,16 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build Docker Image
+      - name: Build and Push Docker Image to Staging
         uses: docker/build-push-action@v5
         with:
           context: .
-          tags: ${{ secrets.DOCKER_USER }}/railworks:staging
+          push: true # Ensure the image is pushed to Docker Hub
+          tags: |
+            ${{ secrets.DOCKER_USER }}/railworks:staging
+            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
 
       # Docker Scout Compare Command
-      - name: Authenticate to Docker
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PAT }}
-
       - name: Docker Scout
         id: docker-scout
         if: ${{ github.event_name == 'pull_request' }}
@@ -95,8 +92,11 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker Image to Production
         uses: docker/build-push-action@v5
         with:
           context: .
-          tags: ${{ secrets.DOCKER_USER }}/railworks:latest
+          push: true # Ensure the image is pushed to Docker Hub
+          tags: |
+            ${{ secrets.DOCKER_USER }}/railworks:latest
+            ${{ secrets.DOCKER_USER }}/railworks:${{ github.sha }}
