--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+annotated-types==0.7.0
 asgiref==3.8.1
 certifi==2024.12.14
 colorama==0.4.6
 coverage==7.6.10
 Django==5.1.4
 django-daisy==1.0.7
+django-ninja==1.3.0
 factory_boy==3.3.1
 Faker==33.1.0
 iniconfig==2.0.0
@@ -11,6 +13,8 @@ mccabe==0.7.0
 packaging==24.2
 pluggy==1.5.0
 pycodestyle==2.12.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 pyflakes==3.2.0
 pytest==8.3.4
 pytest-cov==6.0.0
