--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+cadquery==2.5.2
+cadquery-ocp==7.7.2
+casadi==3.6.7
 certifi==2024.12.14
 colorama==0.4.6
 coverage==7.6.10
 Django==5.1.4
 django-daisy==1.0.7
 django-ninja==1.3.0
+ezdxf==1.3.5
 factory_boy==3.3.1
 Faker==33.1.0
+fonttools==4.55.6
 iniconfig==2.0.0
 mccabe==0.7.0
+multimethod==1.12
+nlopt==2.9.1
+numpy==2.2.2
 packaging==24.2
+path==17.1.0
 pluggy==1.5.0
 pycodestyle==2.12.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyflakes==3.2.0
+pyparsing==3.2.1
 pytest==8.3.4
 pytest-cov==6.0.0
 pytest-django==4.9.0
@@ -25,5 +35,6 @@ sentry-sdk==2.19.2
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+typish==1.9.3
 tzdata==2024.2
 urllib3==2.3.0
