--- a/resources/configs/default_config_v2.yaml
+++ b/resources/configs/default_config_v2.yaml
@@ -11,9 +11,9 @@ offset_z: 0
 row_repetition: 4  # Number of rows per tile
 tile_width: 4  # Number of bricks per row
 
-bond_pattern: flemish  # Options: "flemish", "stretcher", "stack"
+bond_pattern: "flemish"  # Options: "flemish", "stretcher", "stack"
 
-file_name: "custom_brick_tile_test"  # 👈 Dynamically set file name here
+file_name: "stretcher_v1"  # 👈 Dynamically set file name here
 
 export_formats:
   - step
