--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,19 @@ contourpy==1.3.1
 coverage==7.6.10
 cqkit==0.5.8
 cycler==0.12.1
+datetime-truncate==1.1.1
 debugpy==1.8.12
 decorator==5.1.1
 Django==5.1.4
+django-admin-charts==1.4.0
+django-bower==5.2.0
 django-daisy==1.0.7
+django-easy-select2==1.5.8
 django-extensions==3.2.3
+django-memoize==2.3.1
+django-multiselectfield==0.1.13
 django-ninja==1.3.0
+django-nvd3==0.10.1
 executing==2.2.0
 ezdxf==1.3.5
 factory_boy==3.3.1
@@ -76,6 +83,8 @@ pytest==8.3.4
 pytest-cov==6.0.0
 pytest-django==4.9.0
 python-dateutil==2.9.0.post0
+python-nvd3==0.16.0
+python-slugify==8.0.4
 pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -84,12 +93,14 @@ ruff==0.8.4
 scipy==1.15.1
 sentry-sdk==2.19.2
 simple-websocket==1.1.0
+simplejson==3.19.3
 six==1.17.0
 sqlparse==0.5.3
 stack-data==0.6.3
 svgelements==1.9.6
 svgpathtools==1.6.1
 svgwrite==1.4.3
+text-unidecode==1.3
 tornado==6.4.2
 traitlets==5.14.3
 trianglesolver==1.2
