--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 annotated-types==0.7.0
+anyio==4.7.0
 anytree==2.12.1
 asgiref==3.8.1
 asttokens==3.0.0
+async-timeout==5.0.1
+babel==2.16.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
 build123d==0.8.0
 cachetools==5.5.1
 cadquery==2.5.2
 cadquery-ocp==7.7.2
 casadi==3.6.7
-certifi==2024.12.14
+certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
@@ -20,26 +24,33 @@ cycler==0.12.1
 datetime-truncate==1.1.1
 debugpy==1.8.12
 decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.9
 Django==5.1.4
 django-admin-charts==1.4.0
 django-bower==5.2.0
-django-daisy==1.0.7
+django-daisy==1.0.9
 django-easy-select2==1.5.8
 django-extensions==3.2.3
 django-memoize==2.3.1
 django-multiselectfield==0.1.13
 django-ninja==1.3.0
 django-nvd3==0.10.1
+djangorestframework==3.14.0
+docutils==0.20.1
 executing==2.2.0
 ezdxf==1.3.5
 factory_boy==3.3.1
-Faker==33.1.0
+Faker==35.2.0
+filelock==3.16.1
+filetype==1.2.0
 Flask==3.1.0
 flask-sock==0.7.0
-fonttools==4.55.6
+fonttools==4.55.8
 h11==0.14.0
 idna==3.10
 imagesize==1.4.1
+importlib_metadata==8.6.1
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.31.0
@@ -49,6 +60,8 @@ Jinja2==3.1.5
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+laces==0.1.1
+Markdown==3.7
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
@@ -64,13 +77,13 @@ orjson==3.10.15
 packaging==24.2
 parso==0.8.4
 path==17.1.0
+pbr==6.1.0
 pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.50
 psutil==6.1.1
 pure_eval==0.2.3
-py-lib3mf==2.3.1
 pyaml==25.1.0
 pycodestyle==2.12.1
 pydantic==2.10.6
@@ -85,18 +98,21 @@ pytest-django==4.9.0
 python-dateutil==2.9.0.post0
 python-nvd3==0.16.0
 python-slugify==8.0.4
-pywin32==308
+pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
-ruff==0.8.4
+ruff==0.9.4
+scanreq==0.0.9
 scipy==1.15.1
 sentry-sdk==2.19.2
 simple-websocket==1.1.0
 simplejson==3.19.3
 six==1.17.0
+Sphinx==7.4.7
 sqlparse==0.5.3
 stack-data==0.6.3
+starlette==0.45.0
 svgelements==1.9.6
 svgpathtools==1.6.1
 svgwrite==1.4.3
@@ -108,9 +124,12 @@ typing_extensions==4.12.2
 typish==1.9.3
 tzdata==2024.2
 urllib3==2.3.0
-vtk==9.3.1
+uvicorn==0.34.0
+virtualenv==20.28.0
 wcwidth==0.2.13
 webcolors==24.8.0
 websockets==13.1
 Werkzeug==3.1.3
+Willow==1.8.0
 wsproto==1.2.0
+zipp==3.21.0
